Cosmetic changes 1. .gitignore - updated unused files 2. globals.py - added MATERIAL_NONE and MATERIAL_NAME (printing dimensions now show material type from MATERIAL_NAME) 3. ProductDetails() moved from userinterface.py to manager.py

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ product.~py
 gui.~py
 resources_rc.py
 resources_rc.~py
+globals.~py
+main.~py
+manager.~py
+Product Manager.~psproj
+timer.~py
+userinterface.~py
